; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_cls_u32.c_u32_hash_fold.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_cls_u32.c_u32_hash_fold.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tc_u32_sel = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.tc_u32_sel*, i32)* @u32_hash_fold to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @u32_hash_fold(i32 %0, %struct.tc_u32_sel* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.tc_u32_sel*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.tc_u32_sel* %1, %struct.tc_u32_sel** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.tc_u32_sel*, %struct.tc_u32_sel** %5, align 8
  %10 = getelementptr inbounds %struct.tc_u32_sel, %struct.tc_u32_sel* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = and i32 %8, %11
  %13 = call i32 @ntohl(i32 %12)
  %14 = load i32, i32* %6, align 4
  %15 = lshr i32 %13, %14
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  ret i32 %16
}

declare dso_local i32 @ntohl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
